# simurg_test_case

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: auth.py  helpers.py  tasks.py
